--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 								<!-- <li class="icon solid fa-phone">(71) 9 9986-1110</li> -->
 								<li class="icon solid fa-envelope"><a href="#">rodrigo_araujo93@outlook.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/rodrigo-ara%C3%BAjo-b242711b1/ target="_blank"">Rodrigo Araújo</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/rodrigo-ara%C3%BAjo-b242711b1/" target="_blank">Rodrigo Araújo</a></li>
 							</br></br><h4>Qualquer sugestão ou dúvida, por favor entre em contato.</h4>
 							</ul>
 							<ul class="copyright">
