--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<a href="#" class="image"><img src="img/profille_pictures.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Sobre mim</h2>
-										<p>Meu nome é Rodrigo Araújo, sou formado em Sistemas de Informação e trabalho como  Coordenador de orçamento público, com funções de Analista de dados, em uma Artaquia de cultura no governo do Estado da Bahia.</p>
+										<p>Meu nome é Rodrigo Araújo, sou formado em Sistemas de Informação e trabalho como  Coordenador de orçamento público, com atividades de Analista de dados, em uma Autaquia de cultura no governo do Estado da Bahia.</p>
 										<p>Atualmente, trabalho na extração, tratamento, limpeza, integração e controle de dados orçamentários e financeiros, com finalidade de acompanhar rotineiramente a execução orçamentária e financeira do IPAC (Instituto do Patrimônio Artístico e Cultural da Bahia).</p>
 										<p>Além disso, trabalho com manipulação de dados orçamentários e financeiros, com finalidade de geração de <i>insights</i> para elaboração de <i>Dashnoards</i>, utilizando recursos estatísticos, bem como construção de relatórios analíticos, a fim de auxiliar na tomada de decisão por parte da Diretoria Geral, no que tange à tendência da execução orçamentária e financeira do IPAC.</p>
 										<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de  Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados.</p>
